--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -4,6 +4,7 @@
     font-family: Rajdhani;
     font-weight: 600;
     color: var(--title);
+    
 }
 
 .CountdownContainer>div {
@@ -13,7 +14,7 @@
     align-items: center;
     justify-content: space-between;
 
-    background: var(--white);
+    background: var(--background);
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     font-size: 8.5rem;
@@ -35,6 +36,8 @@
 .CountdownContainer>span {
     font-size: 6.25rem;
     margin: 0 0.5rem;
+    color: var(--white);
+
 }
 
 .countdownButton{
