--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -17,3 +17,12 @@
     gap: 6.25rem;
     align-content: center;
 }
+
+@media(max-width:750px){
+    .container section{
+        display: flex;
+        flex-direction: column;
+
+        
+    }
+}
